<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Mailssenger</string>
    
    <string name="noboringactionbar_title">Beautiful picture</string>
    
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
     <string name="search_hint">Search form here</string>
     <string name="action_add">add</string>
    <string name="hello_world">Hello world!</string>
    <string name="signin_label_email">Gmail/163mail/Bham Mail Address</string>
    <string name="signin_password">Email password</string>
    <string name="signin_repassword">Repeat password</string>
    <string name="signin">User License</string>
    <string name="login">Add Email Account</string>
    <string name="chooser_title">Birham:Choose file</string>
    
    <string name="register_tip">Ps: all of above item is required</string>
    <string name="net_error_tip">The network is not working,pleas check your network setting!</string>
    <string name="left_title_name">Friends</string>
    <string name="center_title_name">Recent Converstaion</string>
    <string name="right_title_name">Setting</string>
    <string name="no_chat">No new message for now</string>
    <string name="versionnum">V1.2.3</string>
    <!-- 上拉下拉 -->
    <string name="xlistview_header_hint_normal">pull to refresh</string>
    
    <string name="xlistview_header_hint_ready">release to refresh</string>
    <string name="xlistview_header_hint_loading">Refreshing</string>
    <string name="xlistview_header_last_time">Last update time: </string>
    <string name="xlistview_footer_hint_normal">Load more</string>
    <string name="xlistview_footer_hint_ready">Release to load more</string>
    <string name="searchdialog_find_contact_new">Search </string>
    <string name="first_start_title">Initial setting</string>
    <string name="first_start_tips">Nick name is required</string>
    <string name="first_start_scuess"> Successfully connected to server</string>
    <string name="first_start_dialog_text">Connecting to the server&#8230;</string>
    
    <string name="isSingle">Single</string>
    <string name="info_info">Personal Information</string>
    <string name="face_jazz_effects">Not implemented yet</string>
    <string name="set_acount_info">Personal Information</string>
    <string name="set_face_jazz">Not implemented yet</string>
    <string name="set_push">Notifictaion</string>
    <string name="sound_and_vibrate">Sound</string>
    <string name="new_msg_notify">New Message remind</string>
    <string name="setting_display">UI</string>
    <string name="logout_account">Logout</string>
    <string name="security_and_privacy">Security and privacy</string>
    <string name="logout_exit_account">Exit</string>
    <string name="pref_assistant">Other function</string>
    <string name="delete_friend_confirm">Are you sure to delete %1$s ?</string>
    <string name="menu_about">About</string>
    <string name="set_message_notify">Notification bar icon</string>
    <string name="set_pullrefresh_sound">Refresh sound</string>
    <string name="set_message_sound">New messsage sound</string>
    <string name="set_show_head">Show my avatar when chatting</string>
    <string name="press_again_backrun">Press again to run in the background</string>
    <string name="press_again_exit">Press again to exit the application</string>
    <string name="app_is_run_background">Bham Messager is running in the background</string>
    <string name="user_agreement">Han</string>
    <string name="official_website">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="feedback_suggest">feedback and suggest</string>
    <string name="version_upgrade">Version Update</string>
    <string name="feature_info">Function introduce</string>
    <string name="QQS_weibo">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    
    <string name="my_email">hanchiang.it@qq.com</string>
    <string name="app_information">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;This is an Instant message and email client for University of Birmingham！Since it is developed in a short period of time, so there must be many bugs, you can report error to me by send me an email, I will appreciate that.</string>
    <string name="app_error">Application error</string>
    <string name="app_error_message">Sorry, there is an error, the app is going to exit.\n Please report this error to me by email,I will fix it as soon as possible, thank you!</string>
    <string name="submit_report">Submit report</string>
    
    <string name="rename">Alias</string>
    <string name="move">Move</string>
    <string name="delete">Delete</string>
    <string name="open">Open</string>
    <string name="exit_confirm_toast">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Are you sure to exit, Bham Mail Client will not delete any history data when exit but will not push you notifictaion after that, you need to login next time</string>
    <string name="pull_to_refresh_pull_label">pull to refresh</string>
    <string name="pull_to_refresh_release_label">pull to refresh</string>
    
        
    <string name="all_rights_reserved">Copyright © 2013-2014 Han. All Rights Reserved.</string>
    <string name="my_blog_url">http://www.hanlin.me/</string>
    <string name="pull_to_refresh_refreshing_label">Loading</string>
    <string name="setting_about_description">Wish you all the best</string>
    <!-- Just use standard Pull Down String when pulling up. These can be set for languages which require it -->
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="action_help_info">help</string>
    <string name="login_help_info_detail">The login acount is your gmail or 163 mail,our service is based on them.
If you have some question when you use this product ,please send e-mail to 	</string>

   <!--  for navigation drawer -->
    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    
</resources>