<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mlist"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1.0"
    android:orientation="vertical"
    android:background="@drawable/menu_bg"
    android:textColor="#FFFFFFFF" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/menu_bg"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/userinfo_setting"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/menu_top_bg"
            android:padding="5dip" >

            <ImageView
                android:id="@+id/userinfo_avatar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/app_icon" />

            <TextView
                android:id="@+id/userinfo_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="2dp"
                android:layout_toRightOf="@+id/userinfo_avatar"
                android:shadowColor="#75000000"
                android:shadowDx="0"
                android:shadowDy="2"
                android:shadowRadius="3"
                android:text="Bham Mail Client"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/userinfo_emotion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/userinfo_avatar"
                android:layout_alignLeft="@+id/userinfo_name"
                android:layout_below="@+id/nick_name"
                android:layout_marginRight="5dp"
                android:gravity="bottom"
                android:shadowColor="#000000"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="3"
                android:singleLine="true"
                android:text="Enjoy yourself at Birmingham"
                android:textColor="#97bdcf"
                android:textSize="14sp" />
        </RelativeLayout>
        
        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10.0dip"
                android:orientation="vertical" >

            <RelativeLayout
                    android:id="@+id/set_about"
                    android:layout_width="fill_parent"
                    android:layout_height="44.0dip"
          
                    android:clickable="true"
                    android:focusable="true" >

                    <TextView
                        android:textColor="#FFFFFFFF"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="12.0dip"
                        android:duplicateParentState="true"
                        android:gravity="center_vertical"
                        android:text="@string/menu_about" />

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="14.0dip"
                        android:layout_height="14.0dip"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="8.0dip"
                        android:duplicateParentState="true"
                        android:src="@drawable/arrow_right_gray_white" />
                </RelativeLayout>
                
                            
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0.8dip"
        android:background="#121212" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0.8dip"
        android:background="#757575" >
    </LinearLayout>
            
                <RelativeLayout
                    android:id="@+id/set_feedback"
                    android:layout_width="fill_parent"
                    android:layout_height="44.0dip"
                    
                    android:clickable="true"
                    android:focusable="true" >

                    <TextView
                        android:textColor="#FFFFFFFF"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="12.0dip"
                        android:duplicateParentState="true"
                        android:gravity="center_vertical"
                        android:text="Feedback" />

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="14.0dip"
                        android:layout_height="14.0dip"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="8.0dip"
                        android:duplicateParentState="true"
                        android:src="@drawable/arrow_right_gray_white" />
                </RelativeLayout>

                
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0.8dip"
        android:background="#121212" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0.8dip"
        android:background="#757575" >
    </LinearLayout>
    
                
            </LinearLayout>


    <LinearLayout 
        android:id="@+id/menu_row"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:paddingTop="12dip" 
	    android:background="@drawable/menu_listitem"
	    android:orientation="horizontal" 
	    android:gravity="center_vertical"
    >
    
	    <ImageView
	        android:id="@+id/menu_item_icon"
	        android:layout_width="wrap_content"
            android:layout_height="wrap_content"
              android:layout_marginLeft="8.0dip"
	        android:background="@drawable/selector_menu_setting"
	        android:scaleType="fitCenter" />
	    
	    <TextView
	        android:id="@+id/menu_item_name"
	        android:layout_width="wrap_content"
	        android:layout_height="30dip"
	        android:layout_marginLeft="10dip"
	        android:gravity="center_vertical"
	        android:text="System Setting"
	        android:textColor="#FFF"
	        android:textSize="18sp" />
	    

    </LinearLayout>   
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0.8dip"
        android:background="#121212" >
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0.8dip"
        android:background="#757575" >
    </LinearLayout>

             
                    <RelativeLayout
                android:id="@+id/pushSetting"
                android:layout_width="fill_parent"
                android:layout_height="44.0dip"
                android:layout_marginTop="2.0dip"
                android:clickable="false"
                android:focusable="false" >

                <TextView
                    android:id="@+id/encoding_style"
                 	android:textColor="#FFFFFFFF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="12.0dip"
                    android:duplicateParentState="true"
                    android:gravity="center_vertical"
                    android:text="@string/set_message_notify" />

                <com.mailssenger.switchbtn.SwitchButton
                    android:id="@+id/message_notify_switch"
                    android:layout_width="80dip"
                    android:layout_height="28dip"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="8.0dip" />
            </RelativeLayout>
            
                      <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0.8dip"
        android:background="#121212" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0.8dip"
        android:background="#757575" >
    </LinearLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="44.0dip"
                
                android:clickable="false"
                android:focusable="false" >

                <TextView
                   android:textColor="#FFFFFFFF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="12.0dip"
                    android:duplicateParentState="true"
                    android:gravity="center_vertical"
                    android:text="@string/set_pullrefresh_sound" />

                <com.mailssenger.switchbtn.SwitchButton
                    android:id="@+id/pullrefresh_sound_switch"
                    android:layout_width="80dip"
                    android:layout_height="28dip"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="8.0dip"/>
            </RelativeLayout>

                <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0.8dip"
        android:background="#121212" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0.8dip"
        android:background="#757575" >
    </LinearLayout>
            <RelativeLayout
                android:id="@+id/sound_and_vibrate"
                android:layout_width="fill_parent"
                android:layout_height="44.0dip"
                
                android:clickable="false"
                android:focusable="false" >

                <TextView
                    android:textColor="#FFFFFFFF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="12.0dip"
                    android:duplicateParentState="true"
                    android:gravity="center_vertical"
                    android:text="@string/set_message_sound" />

                <com.mailssenger.switchbtn.SwitchButton
                    android:id="@+id/message_sound_switch"
                    android:layout_width="80dip"
                    android:layout_height="28dip"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="8.0dip" />
            </RelativeLayout>
               
                <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0.8dip"
        android:background="#121212" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0.8dip"
        android:background="#757575" >
    </LinearLayout>
    
    <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16.0dip"
                android:orientation="vertical" >

                <RelativeLayout
                    android:id="@+id/displaySetting"
                    android:layout_width="fill_parent"
                    android:layout_height="44.0dip" 
                    android:clickable="false"
                    android:focusable="false" >

                    <TextView
                        android:textColor="#FFFFFFFF"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="12.0dip"
                        android:duplicateParentState="true"
                        android:gravity="center_vertical"
                        android:text="@string/set_show_head" />

                    <com.mailssenger.switchbtn.SwitchButton
                        android:id="@+id/show_head_switch"
                        android:layout_width="80dip"
                        android:layout_height="28dip"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="8.0dip" />
                </RelativeLayout>
            </LinearLayout>
            
             
        <ListView
            android:id="@+id/menu_list"
            android:layout_width="fill_parent"
            android:layout_height="360dp"
            android:layout_weight="1"
            android:cacheColorHint="#00000000"
            android:listSelector="#00000000"
            android:scrollbars="none" >
        </ListView>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#282828" >
        </LinearLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="50dip"
            android:background="@drawable/right_menu_bottom_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal"
         >

            <Button
                android:id="@+id/right_menu_logout"
                android:layout_width="100dip"
                android:layout_height="42dip"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="15dip"
                android:background="@drawable/right_menu_blue_bt_bg"
                android:drawableLeft="@drawable/right_menu_logout"
                android:text="Logout"
                android:textColor="#FFFFFFFF" />

            <Button
                android:id="@+id/left_menu_exit"
                android:layout_width="100dip"
                android:layout_height="42dip"
                android:layout_alignParentRight="true"
                android:layout_marginRight="15dip"
                android:background="@drawable/right_menu_red_bt_bg"
                android:drawableLeft="@drawable/right_menu_exit"
                android:text="Exit"
                android:textColor="#FFFFFFFF" />
        </RelativeLayout>
        
     
    </LinearLayout>
    
</LinearLayout>